--- a/summaries.html
+++ b/summaries.html
@@ -429,7 +429,146 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>      <!-- Book 8 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="The Bhagavad Gita">
+        </div>
+        <div class="book-info">
+          <h3 data-en="The Bhagavad Gita" data-hi="भगवद गीता">The Bhagavad Gita</h3>
+          <p data-en="A spiritual dialogue between Lord Krishna and Arjuna, offering timeless wisdom on duty, life, and self-realization." data-hi="भगवान कृष्ण और अर्जुन के बीच का आध्यात्मिक संवाद, जिसमें कर्तव्य, जीवन और आत्मज्ञान पर अमर ज्ञान दिया गया है।">
+            A spiritual dialogue between Lord Krishna and Arjuna, offering timeless wisdom on duty, life, and self-realization.
+          </p>
+          <a href="summary8.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 9 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="The Diary of a Young Girl">
+        </div>
+        <div class="book-info">
+          <h3 data-en="The Diary of a Young Girl" data-hi="एक युवा लड़की की डायरी">The Diary of a Young Girl</h3>
+          <p data-en="Anne Frank’s diary during World War II, a moving account of hope, fear, and resilience while hiding from the Nazis." data-hi="द्वितीय विश्व युद्ध के दौरान ऐनी फ्रैंक की डायरी, नाजियों से छुपते समय आशा, भय और धैर्य का भावुक विवरण।">
+            Anne Frank’s diary during World War II, a moving account of hope, fear, and resilience while hiding from the Nazis.
+          </p>
+          <a href="summary9.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 10 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="Trading in the Zone">
+        </div>
+        <div class="book-info">
+          <h3 data-en="Trading in the Zone" data-hi="ट्रेडिंग इन द जोन">Trading in the Zone</h3>
+          <p data-en="Mark Douglas explains the psychology of trading, focusing on discipline, mindset, and overcoming emotional pitfalls." data-hi="मार्क डगलस ने ट्रेडिंग की मनोविज्ञान को समझाया है, जिसमें अनुशासन, मानसिकता और भावनात्मक गलतियों से बचने पर जोर है।">
+            Mark Douglas explains the psychology of trading, focusing on discipline, mindset, and overcoming emotional pitfalls.
+          </p>
+          <a href="summary10.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 11 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="Japanese Candlestick Charting Techniques">
+        </div>
+        <div class="book-info">
+          <h3 data-en="Japanese Candlestick Charting Techniques" data-hi="जापानी कैंडलस्टिक चार्टिंग तकनीक">Japanese Candlestick Charting Techniques</h3>
+          <p data-en="Steve Nison introduces candlestick patterns, blending ancient Japanese techniques with modern trading strategies." data-hi="स्टीव निसन कैंडलस्टिक पैटर्न पेश करते हैं, जो प्राचीन जापानी तकनीकों और आधुनिक ट्रेडिंग रणनीतियों का मिश्रण है।">
+            Steve Nison introduces candlestick patterns, blending ancient Japanese techniques with modern trading strategies.
+          </p>
+          <a href="summary11.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 12 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="Matilda">
+        </div>
+        <div class="book-info">
+          <h3 data-en="Matilda" data-hi="मैटिल्डा">Matilda</h3>
+          <p data-en="Roald Dahl’s classic about a gifted girl with extraordinary intelligence and powers, who stands up against injustice." data-hi="रोआल्ड डाहल की क्लासिक कहानी एक प्रतिभाशाली लड़की की है, जिसके पास अद्भुत बुद्धि और शक्तियाँ हैं और जो अन्याय के खिलाफ खड़ी होती है।">
+            Roald Dahl’s classic about a gifted girl with extraordinary intelligence and powers, who stands up against injustice.
+          </p>
+          <a href="summary12.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 13 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="Harry Potter Series">
+        </div>
+        <div class="book-info">
+          <h3 data-en="Harry Potter Series" data-hi="हैरी पॉटर श्रृंखला">Harry Potter Series</h3>
+          <p data-en="J.K. Rowling’s magical saga of Harry Potter, friendship, courage, and the battle between good and evil." data-hi="जे.के. रोलिंग की जादुई गाथा हैरी पॉटर की, जिसमें दोस्ती, साहस और अच्छाई-बुराई की जंग दिखाई गई है।">
+            J.K. Rowling’s magical saga of Harry Potter, friendship, courage, and the battle between good and evil.
+          </p>
+          <a href="summary13.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 14 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="The Secret Garden">
+        </div>
+        <div class="book-info">
+          <h3 data-en="The Secret Garden" data-hi="द सीक्रेट गार्डन">The Secret Garden</h3>
+          <p data-en="A heartwarming tale of transformation as a young girl discovers a hidden garden that heals both nature and people." data-hi="एक हृदयस्पर्शी कहानी, जिसमें एक बच्ची एक छिपा हुआ बगीचा खोजती है जो प्रकृति और लोगों दोनों को ठीक करता है।">
+            A heartwarming tale of transformation as a young girl discovers a hidden garden that heals both nature and people.
+          </p>
+          <a href="summary14.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 15 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="Percy Jackson Series">
+        </div>
+        <div class="book-info">
+          <h3 data-en="Percy Jackson Series" data-hi="पर्सी जैक्सन श्रृंखला">Percy Jackson Series</h3>
+          <p data-en="Rick Riordan’s adventure-filled series about modern demigods, Greek mythology, and epic quests." data-hi="रिक रिओर्डन की रोमांच से भरी श्रृंखला आधुनिक डेमीगॉड्स, ग्रीक पौराणिक कथाओं और महाकाव्य खोजों के बारे में है।">
+            Rick Riordan’s adventure-filled series about modern demigods, Greek mythology, and epic quests.
+          </p>
+          <a href="summary15.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 16 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="The Hobbit">
+        </div>
+        <div class="book-info">
+          <h3 data-en="The Hobbit" data-hi="द हॉबिट">The Hobbit</h3>
+          <p data-en="J.R.R. Tolkien’s fantasy classic of Bilbo Baggins, dragons, dwarves, and the journey to courage and adventure." data-hi="जे.आर.आर. टॉल्किन की फैंटेसी क्लासिक बिल्बो बैगिंस की, जिसमें ड्रेगन, बौने और साहसिक यात्रा है।">
+            J.R.R. Tolkien’s fantasy classic of Bilbo Baggins, dragons, dwarves, and the journey to courage and adventure.
+          </p>
+          <a href="summary16.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
+      <!-- Book 17 -->
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="The Power of Now">
+        </div>
+        <div class="book-info">
+          <h3 data-en="The Power of Now" data-hi="द पावर ऑफ नाउ">The Power of Now</h3>
+          <p data-en="Eckhart Tolle’s spiritual guide to living fully in the present moment and awakening to true peace." data-hi="एकहार्ट टॉले की आध्यात्मिक मार्गदर्शिका, जो वर्तमान क्षण में पूरी तरह जीने और सच्ची शांति पाने पर केंद्रित है।">
+            Eckhart Tolle’s spiritual guide to living fully in the present moment and awakening to true peace.
+          </p>
+          <a href="summary17.html" data-en="Read Summary" data-hi="सारांश पढ़ें">Read Summary</a>
+        </div>
+      </div>
+
 
   <footer>
     <p data-en="Created with passion by Piyush, Prince & Deepak" data-hi="पियूष, प्रिंस और दीपक द्वारा उत्साह के साथ बनाया गया">
@@ -513,3 +652,4 @@
   </script>
 </body>
 </html>
+
