--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
     <div class="topbar">
       <div class="logo">
         <i class="fas fa-microchip"></i>
-        Nexus<span>Verse</span>
+        PDP<span>Bookhub</span>
       </div>
       <div class="left-controls">
         <button id="langToggle"><i class="fas fa-language"></i> <span>हिंदी</span></button>
@@ -1417,3 +1417,4 @@
   </script>
 </body>
 </html>
+
