--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NexusVerse TechFest - Where Ideas Collide</title>
+  <title>PDPbookhub</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Exo+2:wght@100;200;300;400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -941,14 +941,11 @@
 
   <div class="hero">
     <div class="hero-content">
-      <h1 class="glitch" data-text="NEXUSVERSE TECHFEST 2023">NEXUSVERSE TECHFEST 2023</h1>
-      <p data-en="Where Technology Meets Imagination: Experience the Future Today" data-hi="जहाँ प्रौद्योगिकी कल्पना से मिलती है: भविष्य को आज अनुभव करें">
-        Where Technology Meets Imagination: Experience the Future Today
+      <h1 class="glitch" data-text="World of Books">World of Books</h1>
+      <p data-en="Where Books Meet Technology, and Ideas Take Flight." data-hi=“जहाँ किताबें मिलती हैं तकनीक से, और विचार पंख फैलाते हैं।”>
+       Where Books Meet Technology, and Ideas Take Flight.
       </p>
-      <div class="hero-cta">
-        <a href="#" class="cta-button cta-primary" data-en="Register Now" data-hi="अभी पंजीकरण करें">Register Now</a>
-        <a href="#" class="cta-button cta-secondary" data-en="View Schedule" data-hi="अनुसूची देखें">View Schedule</a>
-      </div>
+     
       <div class="countdown">
         <div class="countdown-item">
           <div class="countdown-number" id="days">00</div>
@@ -971,7 +968,7 @@
   </div>
 
   <div class="container">
-    <h2 class="section-title" data-en="Featured Tech Books" data-hi="फीचर्ड टेक बुक्स">Featured Tech Books</h2>
+    <h2 class="section-title" data-en="Most Viewed Books" data-hi="“सबसे अधिक पढ़ी जाने वाली किताबें”">Most Viewed Books</h2>
     <section class="gallery">
       <div class="book-card holographic-card">
         <div class="book-inner">
@@ -1048,7 +1045,7 @@
       "The future belongs to those who learn more skills and combine them in creative ways." – Robert Greene
     </section>
 
-    <h2 class="section-title" data-en="Why Join NexusVerse?" data-hi="नेक्ससवर्स में क्यों शामिल हों?">Why Join NexusVerse?</h2>
+    <h2 class="section-title" data-en="Why Join PDPbookhub?" data-hi=“क्यों जुड़ें PDPbookhub से”?>Why Join PDPbookhub</h2>
     <section class="info-section">
       <div class="info-card holographic-card">
         <i class="fas fa-brain"></i>
@@ -1084,17 +1081,17 @@
     </section>
 
     <section class="submit-summary holographic-card">
-      <h2 data-en="Submit Your Project" data-hi="अपना प्रोजेक्ट सबमिट करें">Submit Your Project</h2>
-      <p data-en="Have an innovative tech project or book concept? Share it with us for a chance to be featured at NexusVerse!" data-hi="क्या आपके पास एक innovative tech project या book concept है? इसे NexusVerse में featured होने के मौके के लिए हमारे साथ साझा करें!">
-        Have an innovative tech project or book concept? Share it with us for a chance to be featured at NexusVerse!
+      <h2 data-en="Submit Your summaries" data-hi=“अपनी किताबों के सार साझा करें”>Submit Your summaries</h2>
+      <p data-en=“Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub.”!" data-hi=" “क्या आपके पास कोई अनोखा किताब का विचार या सारांश है? हमें भेजें और पाएँ PDPBookHub पर फीचर होने का अवसर।”!">
+       “Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub.
       </p>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDQVbyCEyDv03QfrDQjlMy8it75LlQBgIGALN1eACL7hUFWw/viewform?usp=preview" target="_blank" data-en="Submit Innovation" data-hi="नवाचार सबमिट करें">Submit Innovation</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDQVbyCEyDv03QfrDQjlMy8it75LlQBgIGALN1eACL7hUFWw/viewform?usp=preview" target="_blank" data-en="Submit Summaries" data-hi="“अपना सारांश भेजें”">Submit Innovation</a>
     </section>
   </div>
 
   <footer>
-    <p data-en="Crafted with 💙 by Piyush, Prince & Deepak | NexusVerse TechFest 2023" data-hi="पियूष, प्रिंस और दीपक द्वारा 💙 के साथ तैयार | नेक्ससवर्स टेकफेस्ट 2023">
-      Crafted with 💙 by Piyush, Prince & Deepak | NexusVerse TechFest 2023
+    <p data-en="Crafted with 💙 by Piyush, Prince & Deepak | PDPbookhub" data-hi="पियूष, प्रिंस और दीपक द्वारा 💙 के साथ तैयार |Pdpbookhub">
+      Crafted with 💙 by Piyush, Prince & Deepak |pdpbookhub
     </p>
   </footer>
 
@@ -1417,4 +1414,5 @@
   </script>
 </body>
 </html>
+
 
