--- a/index.html
+++ b/index.html
@@ -942,9 +942,11 @@
   <div class="hero">
     <div class="hero-content">
       <h1 class="glitch" data-text="World of Books">World of Books</h1>
-      <p data-en="Where Books Meet Technology, and Ideas Take Flight." data-hi=“जहाँ किताबें मिलती हैं तकनीक से, और विचार पंख फैलाते हैं।”>
-       Where Books Meet Technology, and Ideas Take Flight.
-      </p>
+    <p data-en="Where Books Meet Technology, and Ideas Take Flight." 
+   data-hi="जहाँ किताबें मिलती हैं तकनीक से, और विचार पंख फैलाते हैं।">
+   Where Books Meet Technology, and Ideas Take Flight.
+</p>
+
      
       <div class="countdown">
         <div class="countdown-item">
@@ -1414,5 +1416,6 @@
   </script>
 </body>
 </html>
+
 
 
