--- a/index.html
+++ b/index.html
@@ -1084,9 +1084,11 @@
 
     <section class="submit-summary holographic-card">
       <h2 data-en="Submit Your summaries" data-hi=“अपनी किताबों के सार साझा करें”>Submit Your summaries</h2>
-      <p data-en=“Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub.”!" data-hi=" “क्या आपके पास कोई अनोखा किताब का विचार या सारांश है? हमें भेजें और पाएँ PDPBookHub पर फीचर होने का अवसर।”!">
-       “Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub.
-      </p>
+     <p data-en="Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub." 
+   data-hi="क्या आपके पास कोई अनोखा किताब का विचार या सारांश है? हमें भेजें और पाएँ PDPBookHub पर फीचर होने का अवसर।">
+   Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub.
+</p>
+
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDQVbyCEyDv03QfrDQjlMy8it75LlQBgIGALN1eACL7hUFWw/viewform?usp=preview" target="_blank" data-en="Submit Summaries" data-hi="“अपना सारांश भेजें”">Submit Innovation</a>
     </section>
   </div>
@@ -1416,6 +1418,7 @@
   </script>
 </body>
 </html>
+
 
 
 
