--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,12 @@
       "The future belongs to those who learn more skills and combine them in creative ways." – Robert Greene
     </section>
 
-    <h2 class="section-title" data-en="Why Join PDPbookhub?" data-hi=“क्यों जुड़ें PDPbookhub से”?>Why Join PDPbookhub</h2>
+   <h2 class="section-title" 
+    data-en="Why Join PDPbookhub?" 
+    data-hi="क्यों जुड़ें PDPbookhub से">
+    Why Join PDPbookhub
+</h2>
+
     <section class="info-section">
       <div class="info-card holographic-card">
         <i class="fas fa-brain"></i>
@@ -1083,7 +1088,11 @@
     </section>
 
     <section class="submit-summary holographic-card">
-      <h2 data-en="Submit Your summaries" data-hi=“अपनी किताबों के सार साझा करें”>Submit Your summaries</h2>
+    <h2 data-en="Submit Your summaries" 
+    data-hi="अपनी किताबों के सार साझा करें">
+    Submit Your summaries
+</h2>
+
      <p data-en="Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub." 
    data-hi="क्या आपके पास कोई अनोखा किताब का विचार या सारांश है? हमें भेजें और पाएँ PDPBookHub पर फीचर होने का अवसर।">
    Have a unique book idea or summary? Share it with us for a chance to be featured on PDPBookHub.
@@ -1418,6 +1427,7 @@
   </script>
 </body>
 </html>
+
 
 
 
