--- a/about.html
+++ b/about.html
@@ -463,20 +463,20 @@
           </div>
         </div>
         
-        <div class="team-member">
-          <div class="member-img">
-            <i class="fas fa-user"></i>
-          </div>
-          <div class="member-info">
-            <h3>Prince</h3>
-            <p data-en="The Innovator" data-hi="नवप्रवर्तक">The Innovator</p>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-          </div>
-        </div>
+     <div class="team-member">
+  <div class="member-img">
+    <img src="images/prince.jpg" alt="Prince">
+  </div>
+  <div class="member-info">
+    <h3>Prince</h3>
+    <p data-en="The Innovator">The Innovator</p>
+    <div class="social-links">
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
+</div>
         
         <div class="team-member">
           <div class="member-img">
@@ -573,4 +573,5 @@
   </script>
 </body>
 </html>
+
 
