--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Add this where you want the user info to appear -->
+<div id="userInfo" style="display: none;">
+    <span id="userName"></span>
+    <button id="signOutBtn" style="margin-left: 10px; padding: 5px 10px; background: #ff3860; border: none; border-radius: 4px; color: white; cursor: pointer;">Sign Out</button>
+</div>
   <title>PDPbookhub</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Exo+2:wght@100;200;300;400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1427,6 +1431,7 @@
   </script>
 </body>
 </html>
+
 
 
 
