--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Add this where you want the user info to appear -->
-<div id="userInfo" style="display: none;">
-    <span id="userName"></span>
-    <button id="signOutBtn" style="margin-left: 10px; padding: 5px 10px; background: #ff3860; border: none; border-radius: 4px; color: white; cursor: pointer;">Sign Out</button>
-</div>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDPbookhub</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Exo+2:wght@100;200;300;400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -135,7 +131,7 @@
       color: var(--accent);
     }
 
-    .left-controls {
+    .left-controls { 
       display: flex;
       gap: 10px;
     }
@@ -1431,6 +1427,7 @@
   </script>
 </body>
 </html>
+
 
 
 
