--- a/summaries.html
+++ b/summaries.html
@@ -635,7 +635,7 @@
     </div>
   </div>
     <!-- Book 9 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/71M7NgQcreL.jpg" alt="The Diary of a Young Girl">
         </div>
@@ -649,7 +649,7 @@
       </div>
 
       <!-- Book 10 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/81ooxseb2XL.jpg" alt="Trading in the Zone">
         </div>
@@ -663,7 +663,7 @@
       </div>
 
       <!-- Book 11 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/81Q+T6tDBTL.jpg" alt="Japanese Candlestick Charting Techniques">
         </div>
@@ -677,7 +677,7 @@
       </div>
 
       <!-- Book 12 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/81F5tUvh0JL.jpg" alt="Matilda">
         </div>
@@ -691,7 +691,7 @@
       </div>
 
       <!-- Book 13 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/81gOjo75nML.jpg" alt="Harry Potter Series">
         </div>
@@ -705,7 +705,7 @@
       </div>
 
       <!-- Book 14 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/91qFc+U06+L.jpg" alt="The Secret Garden">
         </div>
@@ -719,7 +719,7 @@
       </div>
 
       <!-- Book 15 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/91S+Q+0TN9L.jpg" alt="Percy Jackson Series">
         </div>
@@ -733,7 +733,7 @@
       </div>
 
       <!-- Book 16 -->
-      <div class="book-card">
+      <div class="book-card  holographic-card">
         <div class="book-img">
           <img src="https://m.media-amazon.com/images/I/710+HcoP38L.jpg" alt="The Hobbit">
         </div>
@@ -909,3 +909,4 @@
   </script>
 </body>
 </html>
+
