--- a/about.html
+++ b/about.html
@@ -462,10 +462,9 @@
             </div>
           </div>
         </div>
-        
-     <div class="team-member">
+  <div class="team-member">
   <div class="member-img">
-    <img src="images/prince.jpg" alt="Prince">
+    <img src="images/prince.png" alt="Prince" class="profile-photo">
   </div>
   <div class="member-info">
     <h3>Prince</h3>
@@ -477,6 +476,7 @@
     </div>
   </div>
 </div>
+
         
         <div class="team-member">
           <div class="member-img">
@@ -573,5 +573,6 @@
   </script>
 </body>
 </html>
+
 
 
