--- a/about.html
+++ b/about.html
@@ -472,7 +472,7 @@
     <div class="social-links">
       <a href="#"><i class="fab fa-twitter"></i></a>
       <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+     <a href="https://www.instagram.com/_tradewithme16" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
 </div>
@@ -573,6 +573,7 @@
   </script>
 </body>
 </html>
+
 
 
 
