--- a/about.html
+++ b/about.html
@@ -464,7 +464,7 @@
         </div>
   <div class="team-member">
   <div class="member-img">
-    <img src="C:\Users\acm10\Pictures\Screenshots\Screenshot (21).png" class="profile-photo">
+    <img src="C:\Users\acm10\Downloads\Prince.png" class="profile-photo">
   </div>
   <div class="member-info">
     <h3>Prince</h3>
@@ -573,6 +573,7 @@
   </script>
 </body>
 </html>
+
 
 
 
