--- a/about.html
+++ b/about.html
@@ -221,10 +221,16 @@
 
     .member-img {
       height: 200px;
-      background: linear-gradient(45deg, var(--primary), var(--accent));
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
+    }
+
+    .profile-photo {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .member-img i {
@@ -450,7 +456,7 @@
       <div class="team-grid">
         <div class="team-member">
           <div class="member-img">
-            <i class="fas fa-user"></i>
+            <img src="C:\Users\acm10\Downloads\Piyush.png" alt="Piyush" class="profile-photo">
           </div>
           <div class="member-info">
             <h3>Piyush</h3>
@@ -462,25 +468,25 @@
             </div>
           </div>
         </div>
-  <div class="team-member">
-  <div class="member-img">
-    <img src="C:\Users\acm10\Downloads\Prince.png" class="profile-photo">
-  </div>
-  <div class="member-info">
-    <h3>Prince</h3>
-    <p data-en="The Innovator">The Innovator</p>
-    <div class="social-links">
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-     <a href="https://www.instagram.com/_tradewithme16" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
-  </div>
-</div>
-
         
         <div class="team-member">
           <div class="member-img">
-            <i class="fas fa-user"></i>
+            <img src="C:\Users\acm10\Downloads\Prince.png" alt="Prince" class="profile-photo">
+          </div>
+          <div class="member-info">
+            <h3>Prince</h3>
+            <p data-en="The Innovator" data-hi="नवप्रवर्तक">The Innovator</p>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.instagram.com/_tradewithme16" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+        
+        <div class="team-member">
+          <div class="member-img">
+            <img src="C:\Users\acm10\Downloads\Deepak.png" alt="Deepak" class="profile-photo">
           </div>
           <div class="member-info">
             <h3>Deepak</h3>
@@ -506,6 +512,15 @@
             Today, we're proud to have helped thousands of readers discover new ideas, improve their lives, and develop a love for learning through our carefully crafted book summaries.
           </p>
         </div>
+        <div class="story-stats">
+          <div class="stat">
+            <div class="stat-number">1000+</div>
+            <div data-en="Books Summarized" data-hi="सारांशित पुस्तकें">Books Summarized</div>
+          </div>
+          <div class="stat">
+            <div class="stat-number">50K+</div>
+            <div data-en="Happy Readers" data-hi="खुश पाठक">Happy Readers</div>
+          </div>
         </div>
       </div>
     </section>
@@ -573,9 +588,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
