--- a/about.html
+++ b/about.html
@@ -471,7 +471,7 @@
         
         <div class="team-member">
           <div class="member-img">
-            <img src="C:\Users\acm10\Downloads\Prince.png" alt="Prince" class="profile-photo">
+            <img src="file:///C:/Users/acm10/Downloads/ChatGPT%20Image%20Sep%205,%202025,%2005_06_25%20PM.png" alt="Prince" class="profile-photo">
           </div>
           <div class="member-info">
             <h3>Prince</h3>
@@ -588,3 +588,4 @@
   </script>
 </body>
 </html>
+
