--- a/about.html
+++ b/about.html
@@ -456,7 +456,7 @@
       <div class="team-grid">
         <div class="team-member">
           <div class="member-img">
-            <img src="C:\Users\acm10\Downloads\Piyush.png" alt="Piyush" class="profile-photo">
+            <img src="https://lh3.googleusercontent.com/rd-gg/AIJ2gl9hmzTrvoi1MRZ2V1P6GN7gAFibk2Xq9-9wzHQuVtkQ1vApiWbl3gV-HAkE3tgF8SKcxK_MSwP7sGVsDFxBS2fFZVWYHtRAjltZ6wsdlOkHV5gPXvEI6pPP4rfQPHa_w11QVW1hvt0trwNSnW6sMSvSs5_fb0zzOayakgLVkqRx3z2Od5RkPfa3vgOLSaYSBIiFYbmhrx0kCrrascdZEo5lTeATZhBW-ZIAZzAhwQL6Bb-P1qUNSNW0b3qim4eTOIKLg86mTtDlGXBRNpIrnjxI00vzrdQXR2vEfC585P0C-zWwXwnhH-BcF5wbanqn_gQ41jjJ5VppdrRoZPvZiPD4IzP_alP8cBhW9_3vTQ3L1GlX3VnhsO_ISCIgW9LW0bgvLiCZf1-1G4fOMonwZFe3O6xIMfXcg4RUPcDGQHrObssH5jFvEYDRuzEr2QMzERGHLd6k7O74WmlhLaFDTwe7lGsYgVfxCqMnmYLyvZK2sHGDTDAFHh4lcGl4db4kqOnmfkkAz2uwcGI8_xPVXh-GxkTz_BomEgLexFSsgasl-TlV-rpXXbhR6uGE22WkSaEfJn2z-g2jT0eucge_BrT6thP5RO5z0xglmxnC9uY_mRkxBdz78hHzcIebN1cR0SrU8Y5tQPZtRMAUGGMVxxNak5Jc4M7InrAl7f35JrH0dAETwbzgvH27AFdC7EIp2Nruo3jb6HEV13LhdCIADOHoXSbvcqXRViTS4rwgFrOQnwlBwwRMpilUeakm_t5TFYWwKKN69Sah5sbJK1xzD4xyfhApArayd-NL8yHUU4jEHaiZpoNs6s4hWmri_Cbt-1WWnoZ1OeJ4I6WDvuLZQPX0qSbUqbAx4SNsGnb0mmVOSxHqDb_m4qTjDdjZ-FephVpQHm5rMVzV0nQcItDxP3SZKej_WH7gtfJU_H9gwdPvUpoJUGhlM5kwbA8z5BCmEzokw6uIJNI83t9ofSf4kDOJ9bVI0gb5D_2kbC0trJDbDjZrHgln8fLXFIqFNHpGChM2ybs98mrfVR9-Ash0bpvhs8XduuFSj2TZ-a5D8yDrv04q00-hT-0_b4xQDwvDPaZneob8vNYSC_b0MBCzQO763eGCLLFSKCGRVZiS6KaPNVqwSy__N08GTf82OupWAy3l8edLd1N8ZDPIKIZFfPd2-vTOdS1zGiJFfVJDOOBRQtG5-ekprtNbWTjHYdafIIgzwpaNpxztwIA-uuAmGukuyObKrAyddbJuAZPlCfyY9wBeVoKacDPhlvLL3Mr5LrxIjUm4LIuK0JpiUWeeQ9OVXRui15wm4UzQj6IYCKzeNAXbQlUJazBJczeb_wK0cPPjObRAwBi9f17YQA=s1024-rj" alt="Piyush" class="profile-photo">
           </div>
           <div class="member-info">
             <h3>Piyush</h3>
@@ -471,7 +471,7 @@
         
         <div class="team-member">
           <div class="member-img">
-            <img src="file:///C:/Users/acm10/Downloads/ChatGPT%20Image%20Sep%205,%202025,%2005_06_25%20PM.png" alt="Prince" class="profile-photo">
+            <img src="" alt="Prince" class="profile-photo">
           </div>
           <div class="member-info">
             <h3>Prince</h3>
@@ -588,4 +588,5 @@
   </script>
 </body>
 </html>
+
 
