--- a/about.html
+++ b/about.html
@@ -471,7 +471,7 @@
         
         <div class="team-member">
           <div class="member-img">
-            <img src="" alt="Prince" class="profile-photo">
+            <img src="https://lh3.googleusercontent.com/rd-gg-dl/ABS2GSlH5e0nHZcZGwsMj7APJRdKw0quPC4NSdTMvrGVSM5jAzd5KvjFjblBUN1ZxDOLgV0ZWjTwwEVnfmCiyEGjG1yg65v7EhdGtypc0Rv69VvL22K0EN0yaAbLnFmsIiBxwKsJnKHWY9HMp7FCSozxz_PmhTIvXd2RSaan0xRjxfkSYOZomJbVhEG9uYsIteLAgsiqasdViPnuXi9YLCgmbYmQ4gEg2MgnoY6uDYEhJGgi7ONhS5C2SIrycug8Yycyf_GEvx8WiVtQxWxQZyLQ9kIOzXfZiyWiz9C7t4Zz_xCmPflwofWM8vufDhKCn3nBxhzHWTtGcDPEQ8iMOU5vhCM0cOlDui9YXmmGSTdPeXb066E51CRwZEea_egvqEwz4FUB7AFAIA77F93rODl24qr1lmOX-JfMFhKO6cNe9mA3UNDOYJambaed58R4ovAjYK3cqCixQEmNOxHMTXHAkYMtU73tzXqB3zGgIE7prS5T2wIegaaHjjaHzDxeSWTRexb3luVnNKlOqhAykFsYXyBEtGtGQwhhCAkY-h4YGj8PQuDFom0zjf55d3zS2zFbbdbM18M2QnueGZUK_ZMe5607z91w2Qr-hEvOVSHhUoRVtYX7tmkbSYvoq5SkFfkV1s2MhJUaCgd1hBQoGS68BLyVjdtT3UHnbeQmHciht3oUkWaFnDK6cR2ykG8RJk3_HBP-YOU14HE_jYjYwGafb47xJ08zQCPgl2GRxREQVXmp3UZTPlyQWQrqBDwUY7F1WL8IpcgQyFww-OkTYKrL-fr0_NLV4TUK5-RaYCh9KIuGrMmtXt0H0zZnUPGzi4NgQX96x2AzpUG_oUwGbBSQA5JZaYyEGHelKXXx0XojmoNaWUudkXUNGhIp6x14Y9si0fCFztypWCYxCrqdTbAXEG2w2D2LvbZmMN42ilV88hc1dEznpXNDkMm-2GEMVBevCvhG4rYz6gsg6vcYvGApm3g8g_k92QHUJoNguzBzJrPZf8P2yzNsRQFcZZEXKEnLUzmhW-db0biKgjsfhy_b25XmZ0vj4K4idMozwZ_kaszslp4gVHqG1H2fa-EZVECVj7OH4zauG1Ax8ISx9I2wdC0HKasZgiMpqrrY_U2HB6tEQpwkA-bR5LUVFgO0P4n3QgoS829OmqPo9Upz-hHXzKOyBpleIiHInaUW2y6LxhX18F3jbPj6=s1024-rj" alt="Prince" class="profile-photo">
           </div>
           <div class="member-info">
             <h3>Prince</h3>
@@ -588,6 +588,7 @@
   </script>
 </body>
 </html>
+
 
 
 
